// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with value 1`] = `
<div
  class="input default left"
>
  <input
    type="text"
    value="Filter"
  />
</div>
`;

exports[`Render with value of undefined 1`] = `
<div
  class="input default left"
>
  <input
    type="text"
    value=""
  />
</div>
`;

exports[`Render with value set by setValue 1`] = `
<div
  class="input default left"
>
  <input
    type="text"
    value="New value"
  />
</div>
`;
